@startuml
!include ../../_common/style.puml

title L4：RocketMQ4 Provider 类图
left to right direction

package "SPI\nmessage-spi" #ECEFF1 {
  interface MessageProvider
  class ProviderSendRequest
  class ProviderSendResult
  class ProviderSubscriptionRequest
  class ProviderInboundMessage
  interface ProviderSubscription
}

package "RocketMQ4 Provider\nmessage-integration-rocketmq" #FFEBEE {
  class RocketMqMessageProvider
  class RocketMqMessageProviderConfig
  class RocketMqMessageProperties
  class RocketMqMetadataKeys
}

package "RocketMQ4 Native" #FFFDE7 {
  class DefaultMQProducer
  class DefaultMQPushConsumer
}

RocketMqMessageProvider ..|> MessageProvider
RocketMqMessageProvider --> RocketMqMessageProviderConfig
RocketMqMessageProvider --> RocketMqMessageProperties
RocketMqMessageProvider --> RocketMqMetadataKeys
RocketMqMessageProvider --> DefaultMQProducer
RocketMqMessageProvider --> DefaultMQPushConsumer
RocketMqMessageProvider --> ProviderSendRequest
RocketMqMessageProvider --> ProviderSendResult
RocketMqMessageProvider --> ProviderSubscriptionRequest
RocketMqMessageProvider --> ProviderInboundMessage
RocketMqMessageProvider --> ProviderSubscription
@enduml
